# TTJ_2025

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yaml  package-lock.json  test.py
.github/workflows/: javascript-lint.yml  python-lint.yml
backend/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  test.py
backend/agents/: analyzer_agent.py  base_agent.py  intake_agent.py  legal_agent.py  summery_csv_agent.py
backend/agents/outputs/: analyzer_output.json  analyzer_output.txt  intake_output.txt  summery.csv
backend/agents/prompts/: prompts.yaml
backend/agents/rules/: format.yaml  legalbook.yaml
backend/app/: main.py
backend/data/: test_inputs.txt
backend/dataset/: dataset.xlsx
backend/json_dump/: analyser_agent_test.json
backend/repository/: rulebook_repo.py
backend/schema/: schemas.py
backend/scripts/: create_legalbook.py
backend/service/: crawler_service.py  excel_service.py  ocr_service.py
backend/util/: links.py  mapping.json
frontend/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.jsx  App.tsx  index.css
frontend/src/components/: ComplianceLabel.tsx  FindingsTable.tsx  GeoChip.tsx  Layout.tsx  LoadingSkeleton.tsx  LoadingSpinner.tsx  ScoreCard.tsx  SeverityBadge.tsx  SeverityIndicator.tsx  SummaryBar.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/data/: mockData.ts
frontend/src/lib/: api.ts
frontend/src/pages/: About.tsx  AllReports.tsx  Home.tsx  Index.tsx  NotFound.tsx  Report.tsx  (+1 more)
(+2 files in other folders)
