[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.7.0",
    "crawl4ai>=0.7.4",
    "fastapi[standard]>=0.116.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.10",
    "markdownify>=1.1.0",
    "pydantic>=2.11.7",
    "requests>=2.32.5",
    "ruff>=0.12.10",
]
